# game-project

./: .gitignore  README.md  architecture-diagram.drawio
csharp/: NemesisSystem.slnx
csharp/NemesisSystem/: Character.cs  CharacterType.cs  EventSystem.cs  EventType.cs  HistoryEntry.cs  Relationship.cs  RelationshipEvent.cs  RelationshipManager.cs  RelationshipType.cs
csharp/NemesisSystem.Tests/: CharacterTests.cs  EventSystemTests.cs  NemesisSystem.Tests.csproj  RelationshipManagerTests.cs  RelationshipTests.cs
gdscript/: README.md
gdscript/examples/: example_usage.gd
gdscript/src/: CharacterType.gd  EventType.gd  HistoryEntry.gd  Relationship.gd  RelationshipManager.gd
godot-game/: README.md  project.godot
godot-game/scenes/: main.tscn
godot-game/scripts/: combat_manager.gd  dialogue_manager.gd  faction_manager.gd  hud.gd  legacy_manager.gd  main.gd  map_generator.gd  npc.gd  player.gd
javascript/: package.json  tsconfig.json
javascript/src/: Character.ts  CharacterType.ts  EventSystem.ts  EventType.ts  HistoryEntry.ts  Relationship.ts  RelationshipEvent.ts  RelationshipManager.ts  RelationshipType.ts  index.ts
javascript/tests/: character.test.ts  eventSystem.test.ts  relationship.test.ts  relationshipManager.test.ts
open-disaster-responder/: .dockerignore  Dockerfile  README.md  __init__.py  baseline.py  environment.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
open-disaster-responder/server/: app.py
python/: __init__.py  character.py  event.py  event_system.py  relationship.py  relationship_manager.py
(+10 files in other folders)
